tests/baselines/reference/topLevelAwaitErrors.5(module=es2022).errors.txt
topLevelAwaitErrors.5.ts(2,14): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.


==== topLevelAwaitErrors.5.ts (1 errors) ====
    // await in exported class name should fail
    export class await {
                 ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
    }
    